<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidHashDemo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Android Hash Demo!</string>
    <string name="username">enter your username!</string>
    <string name="password">enter your password!</string>
    <string name="compute_sha_1_hash_of_password">Compute SHA-1 hash of password</string>
    <string name="compute_md5_hash_of_password">Compute MD5 hash of password</string>

</resources>
