<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

    <EditText
        android:id="@+id/userName"
        android:layout_below="@+id/textView1"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/username">

    </EditText>

    <EditText
        android:id="@+id/passWord"
        android:inputType="textPassword"
        android:layout_below="@+id/userName"
        android:text=""
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/password"
        >
    </EditText>


    <Button
        android:id="@+id/btn1"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@+id/passWord"
        android:text="@string/compute_sha_1_hash_of_password"
        android:onClick="setContentView" />

    <Button
        android:id="@+id/btn2"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@+id/btn1"
        android:text="@string/compute_md5_hash_of_password"/>


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_below="@+id/btn2"
        android:layout_height="wrap_content" />


</RelativeLayout>